--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>Copyright&nbsp;©&nbsp;2022&nbsp;SHMERGSONS&nbsp;PRIVATE&nbsp;LIMITED<br/>All&nbsp;Rights&nbsp;Reserved.</p>
+  <p>Copyright&nbsp;©&nbsp;2022-2023&nbsp;SHMERGSONS&nbsp;PRIVATE&nbsp;LIMITED<br/>All&nbsp;Rights&nbsp;Reserved.</p>
 </footer>
