--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -2,8 +2,10 @@
 // San Juan #2a4a65 
 // Marigold #c28629 
 // Medium Carmine #aa4b35
-$background-color: #2a4a65; // San Juan
-$text-color: #b5b5a1; // Eagle
+// $background-color: #2a4a65; // San Juan
+$background-color: #000000;
+// $text-color: #b5b5a1; // Eagle
+$text-color: #e5e5e5;
 
 body,
 html {
@@ -15,6 +17,8 @@ body {
   color: $text-color;
   background-color: $background-color;
   overflow: hidden;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 20%, rgba(2, 65, 48, 1) 100%);
 }
 div.wrapper {
   max-width: 640px;
@@ -25,15 +29,17 @@ header {
   height: 12em;
   padding-top: 3em;
   text-align: center;
+  text-shadow: 0px 0px 10px #ffffbd;
   h1 {
-    color: #c28629;
+    color: $text-color; 
     text-transform: uppercase;
     line-height: 3rem;
     margin: 2rem 0 1rem 0;
     font-size: 3rem;
   }
   h2 {
-    color: #c28629;
+    color: $text-color;
+    // color: #c28629;
     text-transform: uppercase;
     font-size: 1.5rem;
   }  
