--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -16,7 +16,7 @@ body {
   font-family: "Open Sans", sans-serif;
   color: $text-color;
   background-color: $background-color;
-  overflow: hidden;
+  overflow-x: hidden;
   background: rgb(0, 0, 0);
   background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 20%, rgba(2, 65, 48, 1) 100%);
 }
@@ -76,12 +76,14 @@ h6 {
   }
   main {
     p {
-      font-size: 2em;
+      // font-size: 2em;
+      font-size: 4vmin;
     }
   }
   footer {
     > p {
-      font-size: 1.5em;
+      // font-size: 1.5em;
+      font-size: 2.25vmin;
     }
   }
 }
