--- a/assets/index.scss
+++ b/assets/index.scss
@@ -1,5 +1,3 @@
----
----
 @import "global";
 
 
@@ -13,12 +11,15 @@
 body {
   background: rgb(0, 0, 0);
   // background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 20%, rgba(2, 65, 48, 1) 100%);
-  background: url("circuit-board.png"),
+  // background: url("circuit-board.png"),
+    background: url("computer-circuit.png"),
     linear-gradient(180deg, black 0%, black 20%, #024130 100%),
     #024130;
-  background-size: 640px, auto, auto;
+  // background-size: 640px, auto, auto;
+  background-size: 150vw auto, auto, auto;
   background-repeat: no-repeat;
-  background-position: calc(100vw - 600px) -88px, left top, left top;
+  // background-position: calc(100vw - 600px) -88px, left top, left top;
+  background-position: -10vw -20vh, left top, left top;
 }
 header {
   // background-image: url('circuit-board.png');
