--- a/assets/index.scss
+++ b/assets/index.scss
@@ -46,3 +46,9 @@ p {
   &.justify { text-align: justify; }
   &.center { text-align: center; }
 }
+
+.svg-email {
+  width: 12em;
+  height: 1.5em;
+  vertical-align: middle;
+}
